Adding "support" page
This page does not exist. We are only introducing it to mimic a bug.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,7 @@
   link: /contact/
   new_window: false
   highlight: false
+- name: Support
+  link: /support/
+  new_window: false
+  highlight: false
